<resources>
    <string name="app_name">MyBookManage</string>
    <string name="add">+</string>
    <string name="Book_name">Name</string>
    <string name="Book_Author">Author</string>
    <string name="Book_Translator">Translator</string>
    <string name="Book_Publisher">Publisher</string>
    <string name="Book_PubDate">PubDate</string>
    <string name="Book_ISBN">ISBN</string>

    <string name="Book_name_hint">Name 0f the book</string>
    <string name="Book_Author_hint">Author 0f the book</string>
    <string name="Book_Translator_hint">Translator of the book</string>
    <string name="Book_Publisher_hint">Publisher 0f the book</string>
    <string name="Book_PubDate_hint">PubDate of the book</string>
    <string name="Book_ISBN_hint">ISBN 0f the book</string>

    <string name="Book_detail">DETAILS：</string>
    <string name="Book_cover">Book-cover</string>
    <string name="Book_text_shelf">Please choose a shilf</string>
    <string name="Book_text_link">Here you can add book link</string>
    <string name="Book_text_tags">Here you can add book tags</string>
    <string name="save">Save</string>
    <string name="edit_book_details">Edit book details</string>
    <string name="all">All</string>
    <string name="please_choose_a_shilf">Please choose a shilf</string>
    <string name="decide_the_reading_status">Decide the reading status</string>
    <string name="link">link</string>
    <string name="tags">tags</string>

    <string-array name="Reading_status_edit">
        <item>Reading</item>
        <item>To_be_read</item>
        <item>Finish_reading</item>
    </string-array>

    <string-array name="Book_shelf_edit">
        <item>Novel</item>
        <item>Magazine</item>
        <item>Textbook</item>
        <item>Poetry</item>
    </string-array>

    <string-array name="Book_shelf_main">
        <item>All</item>
        <item>Novel</item>
        <item>Magazine</item>
        <item>Textbook</item>
        <item>Poetry</item>
    </string-array>

    <string name="MENU_Confirmation">Confirmation</string>
    <string name="MENU_delete_to_sure">Are you sure to delete this Book？</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="blank" />
    <string name="book_details">Book details</string>
    <string name="todo">TODO</string>
    <string name="bookname">图书名称：</string>
    <string name="zuo_zhe">作者：</string>
    <string name="yi_zhe">译者：</string>
    <string name="chu_ban_she">出版社：</string>
    <string name="chu_ban_day">出版日期：</string>
    <string name="ISBN_ma">ISBN码：</string>
    <string name="yue_du_zhuang_tai">阅读状态：</string>
    <string name="shu_jia">所属书架：</string>
    <string name="链接">图书链接：</string>
    <string name="biao_qian">图书标签：</string>
    <string name="books">Books</string>
    <string name="search">Search</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="about">About us</string>
    <string name="user_name">Terry</string>
    <string name="user_email">974378437@qq.com</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="百度">百度</string>
    <string name="了解更多">了解更多</string>
    <string name="豆瓣读书">豆瓣读书</string>
    <string name="读书网">读书网</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="图书信息">图书信息</string>
    <string name="豆瓣相关信息">豆瓣相关信息</string>
    <string name="appname">Book Manage</string>
    <string name="version_1_0_21">Version 1.0.21</string>
    <string name="copyright">Copyright © 2022-2122 Terry.All Rights Reserved.</string>

</resources>