<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:hint="@string/Book_name"
        >
    </EditText>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:hint="@string/Book_Author"
        >
    </EditText>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:hint="@string/Book_Translator"
        >
    </EditText>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:hint="@string/Book_Publisher"
        >
    </EditText>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:hint="@string/Book_PubDate"
        >
    </EditText>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:hint="@string/Book_ISBN"
        >
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Book_detail"
        android:textSize="30sp">
    </TextView>


</LinearLayout>