<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity">

    <include layout="@layout/edit_book_detail_toolbar">

    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/book_cover_image_view"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/Book_cover"
                android:cropToPadding="true">
            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="4dp"
            android:layout_marginTop="-4dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Book_name">
                </TextView>

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/Book_name_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Book_Author">
                </TextView>

                <EditText
                    android:id="@+id/edit_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/Book_Author_hint"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Book_Translator">
                </TextView>

                <EditText
                    android:id="@+id/edit_translator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/Book_Translator_hint" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Book_Publisher">
                </TextView>

                <EditText
                    android:id="@+id/edit_publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/Book_Publisher_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Book_PubDate"
                    >
                </TextView>

                <EditText
                    android:id="@+id/edit_pubdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/Book_PubDate_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Book_ISBN">
                </TextView>

                <EditText
                    android:id="@+id/edit_isbn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/Book_ISBN_hint" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Book_detail"
            android:textSize="30sp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/ic_baseline_bookshelf_24"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:text="@string/Book_text_shelf"
                android:textSize="15sp">
            </TextView>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginStart="70dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:entries="@array/Book_shelf_edit">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/ic_baseline_booknotes_24"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Please choose a shilf"
                android:textSize="15sp">
            </TextView>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_marginStart="60dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:entries="@array/Book_shelf_edit">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/ic_baseline_booknotes_24"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Book_text_notes"
                android:textSize="15sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="notes"
                android:layout_marginStart="10dp">
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/ic_baseline_label_24"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Book_text_tags"
                android:textSize="15sp">
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="tags"
                android:layout_marginStart="17dp">
            </EditText>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>



