<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetailLookActivity">

    <include layout="@layout/look_toolbar" />

    <ImageView
        android:id="@+id/Book_cover_look"
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo">
    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="70dp">

        <TextView
            android:id="@+id/textView_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/bookname"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/Book_name_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView_1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp">

        <TextView
            android:id="@+id/textView_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/zuo_zhe"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/Book_author_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="55dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView_2"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp">

        <TextView
            android:id="@+id/textView_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/yi_zhe"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/Book_translator_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="55dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView_3"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp">

        <TextView
            android:id="@+id/textView_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/chu_ban_she"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/Book_publisher_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="36dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView_4"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp">

        <TextView
            android:id="@+id/textView_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/chu_ban_day"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/Book_pubdate_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="23dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView_5"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp">

        <TextView
            android:id="@+id/textView_6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/ISBN_ma"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/Book_isbn_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="40dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView_6"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp">

        <TextView
            android:id="@+id/textView_7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/yue_du_zhuang_tai"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/Book_reading_status_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="23dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView_7"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp">

        <TextView
            android:id="@+id/textView_8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/shu_jia"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/Book_shelf_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="23dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView_8"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp">

        <TextView
            android:id="@+id/textView_9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/bi_ji"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/Book_notes_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="23dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView_9"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp">

        <TextView
            android:id="@+id/textView_10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/biao_qian"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/Book_tags_look"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="23dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView_10"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>